exports[`getFragmentSchema/json-schema - generates schema for simple fragment 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "fragment UserDetails on Query",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "id": {
      "title": "Query.id: Int!",
      "type": "integer"
    },
    "name": {
      "title": "Query.name: String!",
      "type": "string"
    },
    "email": {
      "title": "Query.email: String",
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "__typename",
    "id",
    "name",
    "email"
  ],
  "additionalProperties": false,
  "$defs": {}
}
`;

exports[`getFragmentSchema/json-schema - handles all scalar types in fragment 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "fragment AllScalars on Query",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "stringField": {
      "title": "Query.stringField: String!",
      "type": "string"
    },
    "intField": {
      "title": "Query.intField: Int!",
      "type": "integer"
    },
    "floatField": {
      "title": "Query.floatField: Float!",
      "type": "number"
    },
    "booleanField": {
      "title": "Query.booleanField: Boolean!",
      "type": "boolean"
    },
    "idField": {
      "title": "Query.idField: ID!",
      "type": "string"
    },
    "nullableString": {
      "title": "Query.nullableString: String",
      "type": [
        "string",
        "null"
      ]
    },
    "nullableInt": {
      "title": "Query.nullableInt: Int",
      "type": [
        "integer",
        "null"
      ]
    }
  },
  "required": [
    "__typename",
    "stringField",
    "intField",
    "floatField",
    "booleanField",
    "idField",
    "nullableString",
    "nullableInt"
  ],
  "additionalProperties": false,
  "$defs": {}
}
`;

exports[`getFragmentSchema/json-schema - handles fragment with __typename 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "fragment TypedData on Query",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "id": {
      "title": "Query.id: Int!",
      "type": "integer"
    },
    "name": {
      "title": "Query.name: String!",
      "type": "string"
    },
    "type": {
      "title": "Query.type: String!",
      "type": "string"
    }
  },
  "required": [
    "__typename",
    "id",
    "name",
    "type"
  ],
  "additionalProperties": false,
  "$defs": {}
}
`;

exports[`getFragmentSchema/json-schema - handles fragment with aliases 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "fragment UserWithAliases on Query",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "userId": {
      "title": "Query.id: Int!",
      "type": "integer"
    },
    "userName": {
      "title": "Query.name: String!",
      "type": "string"
    },
    "userEmail": {
      "title": "Query.email: String!",
      "type": "string"
    },
    "joinDate": {
      "title": "Query.createdAt: String!",
      "type": "string"
    },
    "lastModified": {
      "title": "Query.updatedAt: String",
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "__typename",
    "userId",
    "userName",
    "userEmail",
    "joinDate",
    "lastModified"
  ],
  "additionalProperties": false,
  "$defs": {}
}
`;

exports[`getFragmentSchema/json-schema - handles fragment with arrays 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "fragment DataWithArrays on Query",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "id": {
      "title": "Query.id: Int!",
      "type": "integer"
    },
    "tags": {
      "title": "Query.tags: [String!]!",
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "scores": {
      "title": "Query.scores: [Int]",
      "type": [
        "array",
        "null"
      ],
      "items": {
        "type": [
          "integer",
          "null"
        ]
      }
    },
    "items": {
      "title": "Query.items: [Item!]!",
      "type": "array",
      "items": {
        "type": "object",
        "title": "Item",
        "properties": {
          "__typename": {
            "const": "Item"
          },
          "id": {
            "title": "Item.id: Int!",
            "type": "integer"
          },
          "name": {
            "title": "Item.name: String!",
            "type": "string"
          },
          "attributes": {
            "title": "Item.attributes: [String]",
            "type": [
              "array",
              "null"
            ],
            "items": {
              "type": [
                "string",
                "null"
              ]
            }
          }
        },
        "required": [
          "__typename",
          "id",
          "name",
          "attributes"
        ],
        "additionalProperties": false
      }
    },
    "matrix": {
      "title": "Query.matrix: [[Float!]!]",
      "type": [
        "array",
        "null"
      ],
      "items": {
        "type": "array",
        "items": {
          "type": "number"
        }
      }
    }
  },
  "required": [
    "__typename",
    "id",
    "tags",
    "scores",
    "items",
    "matrix"
  ],
  "additionalProperties": false,
  "$defs": {}
}
`;

exports[`getFragmentSchema/json-schema - handles fragment with nested objects 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "fragment UserFullDetails on Query",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "id": {
      "title": "Query.id: Int!",
      "type": "integer"
    },
    "name": {
      "title": "Query.name: String!",
      "type": "string"
    },
    "profile": {
      "title": "Profile",
      "type": [
        "object",
        "null"
      ],
      "properties": {
        "__typename": {
          "const": "Profile"
        },
        "bio": {
          "title": "Profile.bio: String",
          "type": [
            "string",
            "null"
          ]
        },
        "avatar": {
          "title": "Profile.avatar: String!",
          "type": "string"
        },
        "social": {
          "title": "Social",
          "type": [
            "object",
            "null"
          ],
          "properties": {
            "__typename": {
              "const": "Social"
            },
            "twitter": {
              "title": "Social.twitter: String",
              "type": [
                "string",
                "null"
              ]
            },
            "github": {
              "title": "Social.github: String",
              "type": [
                "string",
                "null"
              ]
            },
            "website": {
              "title": "Social.website: String",
              "type": [
                "string",
                "null"
              ]
            }
          },
          "required": [
            "__typename",
            "twitter",
            "github",
            "website"
          ],
          "additionalProperties": false
        }
      },
      "required": [
        "__typename",
        "bio",
        "avatar",
        "social"
      ],
      "additionalProperties": false
    },
    "settings": {
      "title": "Settings",
      "type": "object",
      "properties": {
        "__typename": {
          "const": "Settings"
        },
        "theme": {
          "title": "Settings.theme: String!",
          "type": "string"
        },
        "notifications": {
          "title": "Settings.notifications: Boolean",
          "type": [
            "boolean",
            "null"
          ]
        },
        "privacy": {
          "title": "Privacy",
          "type": [
            "object",
            "null"
          ],
          "properties": {
            "__typename": {
              "const": "Privacy"
            },
            "profileVisible": {
              "title": "Privacy.profileVisible: Boolean!",
              "type": "boolean"
            },
            "emailVisible": {
              "title": "Privacy.emailVisible: Boolean!",
              "type": "boolean"
            }
          },
          "required": [
            "__typename",
            "profileVisible",
            "emailVisible"
          ],
          "additionalProperties": false
        }
      },
      "required": [
        "__typename",
        "theme",
        "notifications",
        "privacy"
      ],
      "additionalProperties": false
    }
  },
  "required": [
    "__typename",
    "id",
    "name",
    "profile",
    "settings"
  ],
  "additionalProperties": false,
  "$defs": {}
}
`;

exports[`getFragmentSchema/json-schema - handles multiple fragments with selection 1`] = `
{
  "basic": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "type": "object",
    "title": "fragment UserBasic on Query",
    "properties": {
      "__typename": {
        "const": "Query"
      },
      "id": {
        "title": "Query.id: Int!",
        "type": "integer"
      },
      "name": {
        "title": "Query.name: String!",
        "type": "string"
      }
    },
    "required": [
      "__typename",
      "id",
      "name"
    ],
    "additionalProperties": false,
    "$defs": {}
  },
  "full": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "type": "object",
    "title": "fragment UserFull on Query",
    "properties": {
      "__typename": {
        "const": "Query"
      },
      "id": {
        "title": "Query.id: Int!",
        "type": "integer"
      },
      "name": {
        "title": "Query.name: String!",
        "type": "string"
      },
      "email": {
        "title": "Query.email: String",
        "type": [
          "string",
          "null"
        ]
      },
      "phone": {
        "title": "Query.phone: String",
        "type": [
          "string",
          "null"
        ]
      },
      "address": {
        "title": "Address",
        "type": [
          "object",
          "null"
        ],
        "properties": {
          "__typename": {
            "const": "Address"
          },
          "street": {
            "title": "Address.street: String!",
            "type": "string"
          },
          "city": {
            "title": "Address.city: String!",
            "type": "string"
          },
          "country": {
            "title": "Address.country: String!",
            "type": "string"
          }
        },
        "required": [
          "__typename",
          "street",
          "city",
          "country"
        ],
        "additionalProperties": false
      }
    },
    "required": [
      "__typename",
      "id",
      "name",
      "email",
      "phone",
      "address"
    ],
    "additionalProperties": false,
    "$defs": {}
  }
}
`;
